--- a/index.html
+++ b/index.html
@@ -147,14 +147,14 @@
           </li>
         </ul>
       </section>
-      <!-- Footer -->
-      <footer>
-        <a href="./index.html">WebStudio</a>
-        <p>
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
-      </footer>
     </main>
+    <!-- Footer -->
+    <footer>
+      <a href="./index.html">WebStudio</a>
+      <p>
+        Increase the flow of customers and sales for your business with digital
+        marketing & growth solutions.
+      </p>
+    </footer>
   </body>
 </html>
