--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
               width="264"
               height="260"
             />
-            <h3><b>Mark Guerrero</b></h3>
+            <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
           <li>
@@ -123,7 +123,7 @@
               width="264"
               height="260"
             />
-            <h3><b>Tom Ford</b></h3>
+            <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
           <li>
@@ -133,7 +133,7 @@
               width="264"
               height="260"
             />
-            <h3><b>Camila Garcia</b></h3>
+            <h3>Camila Garcia</h3>
             <p>Marketing</p>
           </li>
           <li>
@@ -143,7 +143,7 @@
               width="264"
               height="260"
             />
-            <h3><b>Daniel Wilson</b></h3>
+            <h3>Daniel Wilson</h3>
             <p>UI Designer</p>
           </li>
         </ul>
