--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <!-- Section 1-->
       <section>
         <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order service</button>
+        <button type="button">Order Service</button>
       </section>
       <!-- Section 2 -->
       <section>
